# pyvdb

./: CMakeLists.txt  CMakeLists_full.txt  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  pyproject.toml  pyvdbConfig.cmake.in  setup.py  setup_old.py
app/: CMakeLists.txt  pyvdb_app.cpp
cpp/: main.cpp  pyvdb.cpp
cpp/include/: pyvdb.hpp
doc/: CMakeLists.txt  conf.py  index.rst
pyvdb/: __init__.py
pyvdb/pyvdb.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: CMakeLists.txt  pyvdb_t.cpp
tests/python/: test_python_bindings.py
